# Orpheus

./: .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  GoldenLyre.h  Orpheus.h  README.md  TODO.MD  pch.h
.github/: aarch64-toolchain.cmake
.github/workflows/: ci.yml  release.yml
assets/sfx/: explosion.json  flute.json
benchmarks/: benchmark_voicepool.cpp
cmake/: OrpheusConfig.cmake.in
docs/: API.md
example/: example_2.cpp  main.cpp
fuzz/: fuzz_json_parser.cpp
fuzz/corpus/: events_array.json  valid_event.json
include/: AudioCodec.h  AudioManager.h  AudioZone.h  Bus.h  Compressor.h  ConvolutionReverb.h  DSPFilters.h  DistanceCurve.h  Ducker.h  Error.h  Event.h  Export.h  HDRAudio.h  Listener.h  Log.h  MixZone.h  MusicManager.h  OcclusionMaterial.h  OcclusionProcessor.h  OcclusionQuery.h  OpaqueHandles.h  Orpheus.h  Parameter.h  Profiler.h  RTPCCurve.h  RaytracedAcoustics.h  ReverbBus.h  ReverbZone.h  Snapshot.h  SoundBank.h  SurroundAudio.h  Types.h  Version.h  VirtualVoiceManager.h  Voice.h  VoicePool.h  ZoneShape.h
src/: AudioManager.cpp  AudioZone.cpp  Bus.cpp  Ducker.cpp  Event.cpp  HDRFilter_Internal.h  MixZone.cpp  MusicManager.cpp  OcclusionProcessor.cpp  ReverbBus.cpp  ReverbZone.cpp  SoundBank.cpp  VoicePool.cpp
tests/: test_error.cpp  test_log.cpp  test_parameter.cpp  test_snapshot.cpp  test_soundbank.cpp  test_types.cpp  test_voice.cpp  test_voicepool.cpp
